# cs225a-kendama

./: .gitignore  CMakeLists.txt  README.md  Rizon4r.urdf  Rizon4r_with_kendama.urdf  Rizon4r_with_kendama_parallel.urdf  Rizon4r_with_kendama_perp_y.urdf  kendama.xml  kendama_cup_flip.py  kendama_throw_and_catch.py  move_with_ball.py  move_with_ball_predictive.py  pyproject.toml  rising_dragon.py  rising_dragon_joint5.py  rising_dragon_oscillate.py  rising_dragon_rising.py  rizon_left_right.py  rizon_up.py  sense_object_pose.py  simulate_ball_pose.py  single_rizon_real.xml  single_rizon_vis.xml  training.md  training_plan.md  world_single_rizon.urdf
robot/: CMakeCache.txt  CMakeLists.txt  controller.cpp  redis_keys.h  simviz.cpp  world_my_project.urdf
